2010-05-12  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoimagegtk.py: Added image size filter.
	  Changed gconf key names: aspect_* -> filter/aspect_*.

2010-05-08  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* gphotoframe.schemas.in: Fixed the default value of 'ui/geo/position'.
	* NEWS: 0.7.2 release.
	* setup.py: Fixed the permission of share/rss-16.png.
	* NEWS: 0.7.1 release.
	* iconimage.py (IconImage): Fixed a F-Spot icon loading bug
	  (issue #50).

2010-05-07  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* preferences.py (Preferences.start): Set default value for
	  the 'window_sticky' gconf key (issue #49).

2010-05-05  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* te.po: Added new translation.  Thanks Veeven!
	* NEWS: 0.7 release.

2010-04-29  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoframe.py, photoimagegtk.py, photoliststore.py, base.py:
	  Switched gobject -> glib.
	* actors.py, menu.py: Updated translations.

2010-04-22  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* actors.py (ActorGeoIcon): Normalize Google Map URI.

2010-04-20  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* gphotoframe.glade: Added translator credits.
	* rss.py (RSSPhotoList): Remove redundant tags from entry title.

2010-04-17  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* en_GB.po: Added new translation.  Thanks Robert Readman!

2010-04-14  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* fspot/__init__.py, rating.py, sqldb.py: Divided fspot.py.
	* fspot.py: Added support for random photos with support for rate
	  changing.

2010-04-13  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* fspot.py: Added support for recursive tag search.

2010-04-12  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* fspot.py: Fixed total photo numbers with rating filter.
	  Code refactoring.

2010-04-08  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* fspot.py: Fixed a ambiguous column name bug (id -> P.id).
	* actors.py (Texture): Fixed a bug of texture show/hide behaviour.
